# automix

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev.sh
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_and_test.yml  release.yml  stale.yml
cmake/: CompilerWarnings.cmake
docs/: logic-pro-setup.md
rust/automix-dsp/: Cargo.toml  build.rs  cbindgen.toml
rust/automix-dsp/include/: automix_dsp.h
rust/automix-dsp/src/: channel.rs  constants.rs  engine.rs  ffi.rs  gain_sharing.rs  last_mic_hold.rs  level_detector.rs  lib.rs  math_utils.rs  noise_floor.rs  nom.rs  ring_buffer.rs  smoothing.rs
source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  ffi_edge_cases_test.cpp  ffi_lifecycle_test.cpp  ffi_metering_test.cpp  ffi_nan_test.cpp  ffi_parameter_test.cpp  ffi_process_test.cpp  test_helpers.h
