cmake_minimum_required(VERSION 3.25)

# ---- Platform Configuration (before project() so CMake picks them up) ----
if(APPLE)
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "Build universal binary")
    set(CMAKE_OSX_DEPLOYMENT_TARGET "12.0" CACHE STRING "Minimum macOS version")
endif()

# Read version from file
file(READ "${CMAKE_CURRENT_LIST_DIR}/VERSION" CURRENT_VERSION)
string(STRIP "${CURRENT_VERSION}" CURRENT_VERSION)

project(AutoMix VERSION ${CURRENT_VERSION})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ---- Custom CMake modules ----
include(cmake/CompilerWarnings.cmake)

# ---- JUCE (git submodule) ----
add_subdirectory(JUCE)

# ---- Rust DSP static library ----
# Build Rust crate for each architecture in CMAKE_OSX_ARCHITECTURES and combine
# with lipo. Corrosion doesn't support macOS universal binaries, so we drive
# cargo directly.
set(AUTOMIX_RUST_MANIFEST "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/Cargo.toml")
set(AUTOMIX_RUST_TARGET_DIR "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/target")
set(AUTOMIX_RUST_LIB_NAME "libautomix_dsp.a")
set(AUTOMIX_RUST_OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${AUTOMIX_RUST_LIB_NAME}")

# Map CMake arch names to Rust target triples
set(_cargo_commands "")
set(_lib_paths "")
foreach(_arch IN LISTS CMAKE_OSX_ARCHITECTURES)
    if(_arch STREQUAL "arm64")
        set(_rust_target "aarch64-apple-darwin")
    elseif(_arch STREQUAL "x86_64")
        set(_rust_target "x86_64-apple-darwin")
    else()
        message(FATAL_ERROR "Unsupported architecture: ${_arch}")
    endif()
    list(APPEND _cargo_commands
        COMMAND cargo build --manifest-path "${AUTOMIX_RUST_MANIFEST}" --release --target ${_rust_target}
    )
    list(APPEND _lib_paths
        "${AUTOMIX_RUST_TARGET_DIR}/${_rust_target}/release/${AUTOMIX_RUST_LIB_NAME}"
    )
endforeach()

# Collect Rust sources for dependency tracking
file(GLOB_RECURSE RUST_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/src/*.rs"
    "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/Cargo.toml"
    "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/Cargo.lock"
    "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/cbindgen.toml"
)

list(LENGTH CMAKE_OSX_ARCHITECTURES _num_archs)
if(_num_archs GREATER 1)
    add_custom_command(
        OUTPUT "${AUTOMIX_RUST_OUTPUT}"
        ${_cargo_commands}
        COMMAND lipo -create ${_lib_paths} -output "${AUTOMIX_RUST_OUTPUT}"
        COMMENT "Building universal Rust static library (${CMAKE_OSX_ARCHITECTURES})"
        DEPENDS ${RUST_SOURCES}
        VERBATIM
    )
else()
    add_custom_command(
        OUTPUT "${AUTOMIX_RUST_OUTPUT}"
        ${_cargo_commands}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${_lib_paths} "${AUTOMIX_RUST_OUTPUT}"
        COMMENT "Building Rust static library"
        DEPENDS ${RUST_SOURCES}
        VERBATIM
    )
endif()

add_custom_target(automix_dsp_build DEPENDS "${AUTOMIX_RUST_OUTPUT}")

# Clean target for Rust build artifacts
add_custom_target(clean_rust
    COMMAND cargo clean --manifest-path "${AUTOMIX_RUST_MANIFEST}"
    COMMENT "Cleaning Rust build artifacts"
)

add_library(automix_dsp INTERFACE)
target_link_libraries(automix_dsp INTERFACE "${AUTOMIX_RUST_OUTPUT}")
add_dependencies(automix_dsp automix_dsp_build)

# Header generated by cbindgen during cargo build (via build.rs)
set(AUTOMIX_FFI_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/include/automix_dsp.h")

# ---- Melatonin Inspector (debug GUI tool) ----
add_subdirectory(modules/melatonin_inspector)

# ---- Plugin target ----
juce_add_plugin(AutoMix
    COMPANY_NAME "AutoMix"
    BUNDLE_ID "com.automix.plugin"
    IS_SYNTH FALSE
    NEEDS_MIDI_INPUT FALSE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD TRUE
    PLUGIN_MANUFACTURER_CODE Amix
    PLUGIN_CODE Amxp
    FORMATS AU Standalone
    PRODUCT_NAME "AutoMix"
    HARDENED_RUNTIME_ENABLED TRUE
    HARDENED_RUNTIME_OPTIONS "com.apple.security.device.audio-input"
    MICROPHONE_PERMISSION_ENABLED TRUE
    MICROPHONE_PERMISSION_TEXT "AutoMix needs microphone access for standalone operation."
)

juce_generate_juce_header(AutoMix)

target_sources(AutoMix
    PRIVATE
        source/PluginProcessor.cpp
        source/PluginProcessor.h
        source/PluginEditor.cpp
        source/PluginEditor.h
        source/Parameters.h
)

target_include_directories(AutoMix
    PRIVATE
        "${CMAKE_CURRENT_SOURCE_DIR}/source"
        "${CMAKE_CURRENT_SOURCE_DIR}/rust/automix-dsp/include"
)

target_link_libraries(AutoMix
    PRIVATE
        automix_dsp
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_gui_extra
        juce::juce_dsp
        melatonin_inspector
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)

target_compile_definitions(AutoMix
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_REPORT_APP_USAGE=0
    PRIVATE
        AUTOMIX_VERSION="${CURRENT_VERSION}"
)

# Apply warnings
set_automix_warnings(AutoMix)

# ---- On macOS, link system frameworks needed by Rust std ----
if(APPLE)
    target_link_libraries(AutoMix PRIVATE "-framework Security" "-framework CoreFoundation")
endif()

# ---- Tests ----
if(BUILD_TESTING)
    enable_testing()
    add_subdirectory(tests)
endif()
