[package]
name = "automix-dsp"
version = "0.2.0"
edition = "2021"
description = "Dugan-style automixer DSP core"
license = "MIT"

[lib]
crate-type = ["staticlib"]
name = "automix_dsp"

[dependencies]

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
approx = "0.5"
proptest = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
